Major changes in 40.1:
* Fix a memory leak in the timezone monitoring code
* Fix a crash when fetching the system timezone
* Fix keyboard shortcuts and add missing accelerator
* Fix multiday detection of all day events
* Updated translations

Major changes in 40.0:
* Updated translations

Major changes in 40.rc:
* Updated translations
* Minor cleanups

Major changes in 40.beta:
* Updated translations
* Use HdyViewSwitcher in the main window
* Fix the color of new calendars

Major changes in 40.alpha:
* Updated translations
* Depend on libhandy-1
* Port to the newer libgweather api
* Improve the event editor

Major changes in 3.38.0:
* Updated translations

Major changes in 3.37.92:
* Various fixes to the timeline
* Convert timezones when allocating on Week view
* Updated translations

Major changes in 3.36.0:
* Updated translations

Major changes in 3.35.92:
* Reorganize source code folders
* Redesigned event editor dialog
* Many other minor code cleanups
* Updated translations

Major changes in 3.35.2:
* New Nightly app icon
* Updated translations
* Many code cleanups

Major changes in 3.34.0:
* Updated translations

Major changes in 3.33.4:
* Redesigned calendar management dialog
* New, more reliable web discoverer code
* Various bugfixes
* Updated translations

Major changes in 3.33.1:
(Changes to be documented in the future. This is a nonmaintainer release.)

Major changes in 3.32.1:
* Fix release date field in AppData
* Updated translations

Major changes in 3.32.0:
* Updated translations

Major changes in 3.31.90:
* Updated translations
* Fix build failures against latest EDS
* New app icon
* Rewrite timezone support for events
* Run nested EDS in Flatpak

Major changes in 3.30.0:
* Updated translations

Major changes in 3.29.92:
* Better handle 401 status codes when adding calendars (Ralph Plawetzki)
* Updated translations

Major changes in 3.29.90:
* Add Night Light integration
* Bugfixes
* Updated translations

Major changes in 3.27.92: